<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_basepoint_drawlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_catalog_entry_content_view"
        tools:context="com.ustadmobile.staging.port.android.view.BasePointActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- Use if there is more than one view that's sticky at the top -->
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/um_toolbar"
                android:layout_width="fill_parent"
                android:layout_height="54dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_scrollFlags="scroll|enterAlways" />

            <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/activity_basepoint_tablayout">

            </android.support.design.widget.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <android.support.v4.view.ViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/basepoint_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_text"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            />

        <android.support.design.widget.FloatingActionButton
            android:visibility="gone"
            android:id="@+id/activity_basepoint_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add_white_24dp" />

    </android.support.design.widget.CoordinatorLayout>



    <android.support.design.widget.NavigationView
        android:elevation="@dimen/default_margin_dimension"
        android:id="@+id/activity_basepoint_navigationview"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/item_basepoint_header_view"
        app:itemIconTint="@color/basepoint_navigation_drawer_tint"
        android:background="@android:color/white"
        />
</android.support.v4.widget.DrawerLayout>