<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_person_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>