...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:backgroundTint="?colorSecondary"
                android:padding="@dimen/dimen_20dp"
                android:text="@string/ok"
                android:textColor="?colorOnSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructions_text"
                android:onClick="@{() -> presenter.handleClickOk()}"/>

...
