<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/entry_import_link_toolbar"
        layout="@layout/appbar_material_with_progress" />

    <TextView
        android:textAppearance="@style/UmTheme.TextAppearance.Body2"
        android:id="@+id/import_link_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp"
        android:textColor="?colorError"
        android:visibility="gone"
        android:gravity="center"
        tools:visibility="visible"
        android:text="@string/import_link_error"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entry_import_link_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/entry_import_link_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp"
        app:errorEnabled="true"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/import_link_error_message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entry_import_link_editText"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/enter_url" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/entry_import_link_titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp"
        android:visibility="gone"
        app:errorEnabled="true"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entry_import_link_textInput">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entry_import_link_title_editText"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/title" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/import_link_preview_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp"
        android:text="@string/preview"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entry_import_link_titleInput" />


    <WebView
        android:id='@+id/import_link_preview_webview'
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/import_link_preview_label" />

</androidx.constraintlayout.widget.ConstraintLayout>